small fix in the queing algorithm

--- a/Daijoubu/Daijoubu/MainPage.xaml
+++ b/Daijoubu/Daijoubu/MainPage.xaml
@@ -20,6 +20,9 @@
            BackgroundColor="Green"
            FontSize="Large"/>
 
+    <Button x:Name="btn_refresh_notification"
+            Text="Refresh Notifications" />
+    
     <ListView x:Name="listview_homepage_notifications" ItemsSource="{Binding ListViewNotifications}">
       <ListView.ItemTemplate>
         <DataTemplate>
@@ -73,6 +76,7 @@
                          />
 
                   <Label Text="{Binding Clock, StringFormat='⌛: {0}'}"
+                         TextColor="{Binding ClockColor}"
                          Grid.Row="1"
                          Grid.Column="0"
                          />
