--- a/Daijoubu/Daijoubu/SideMenuItems.xaml
+++ b/Daijoubu/Daijoubu/SideMenuItems.xaml
@@ -5,32 +5,55 @@
              BackgroundColor="#273442"
              Padding="50">
 
-  <StackLayout Orientation="Vertical">
-    <!-- <Button Text="Home" 
-                 x:Name="SideMenuButton_Home"/> -->
+  <Grid>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="3*"/>
+    </Grid.ColumnDefinitions>
+
+    <Grid.RowDefinitions>
+      <RowDefinition Height="1*" />
+    </Grid.RowDefinitions>
+
+    <!--<Button Text="Home" 
+                 x:Name="SideMenuButton_Home"/>-->
     <Button Text="Profile"
             x:Name="SideMenuButton_Profile"
             TextColor="White"
-            BackgroundColor="#273442"/>
+            BackgroundColor="#273442"
+            Grid.Row="0"
+            Grid.Column="0"
+            Image="@drawable_hdpi/profile_logo"/>
     <Button Text="Quiz N5"
             x:Name="SideMenuButton_Quiz"
             TextColor="White"
             AutomationId="auto_SideMenuButton_Quiz"
-            BackgroundColor="#273442"/>
+            BackgroundColor="#273442"
+            Grid.Row="1"
+            Grid.Column="0"
+            Image="@drawable_hdpi/n5_logo"/>
     <Button Text="Quiz N4"
             x:Name="SideMenuButton_QuizN4"
             TextColor="White"
             AutomationId="auto_SideMenuButton_Quiz"
-            BackgroundColor="#273442"/>
+            BackgroundColor="#273442"
+            Grid.Row="2"
+            Grid.Column="0"
+            Image="@drawable_hdpi/n4_logo"/>
     <Button Text="Settings"
             TextColor="White"
             x:Name="SideMenuButton_Settings"
-            BackgroundColor="#273442"/>
+            BackgroundColor="#273442"
+            Grid.Row="3"
+            Image="@drawable_hdpi/settings_logo"/>
     <Button Text="About"
             TextColor="White"
             x:Name="SideMenuButton_About"
-            BackgroundColor="#273442"/>
-
-  </StackLayout>
+            BackgroundColor="#273442"
+            Grid.Row="4"
+            Grid.Column="0"
+            Image="@drawable_hdpi/about_logo"/>
+  </Grid>
+  
+  
 
 </ContentView>
