--- a/Daijoubu/Daijoubu/AppPages/ProfilePage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/ProfilePage.xaml
@@ -39,10 +39,22 @@
             Text="Delete User Data"
             Grid.Row="3"
             />
-    <ProgressBar x:Name="progress_deletion"
+    <StackLayout Grid.Row="4">
+    
+      <ProgressBar x:Name="progress_deletion"
                  IsVisible="False"
                  Progress="0"
-                 Grid.Row="4"/>
+                 />
+      <Label x:Name="lbl_prog_percent"
+           Text="{Binding Progress, StringFormat='{0:0.00}', Source={x:Reference progress_deletion}}"
+           FontSize="25"
+           TextColor="Navy"
+           HorizontalOptions="Center"
+           VerticalOptions="End"
+           Grid.Row="5"/>
+    </StackLayout>
+    
+    
     
   </Grid>
   
