--- a/Daijoubu/Daijoubu/AppPages/SettingsPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/SettingsPage.xaml
@@ -7,9 +7,28 @@
              Padding="50"
              >
 
-  <StackLayout>
-    <Label Text="Settings Page"
-           TextColor="Red"
-           />
-  </StackLayout>
+  <ScrollView>
+    <StackLayout>
+
+      <StackLayout Orientation="Horizontal">
+        <Label Text="Haptic Feedback" />
+        <Switch x:Name="switch_HapticFeedback"/>
+      </StackLayout>
+      
+      <Label Text="Answer feedback delay" />
+      <Slider x:Name="slider_AnswerFeedBackDelay"
+              Maximum="10000"
+              Minimum="100"/>
+      <Label Text="{Binding Value,StringFormat='{0:0.0}', Source={x:Reference slider_AnswerFeedBackDelay}}" />
+
+      <ProgressBar x:Name="progress_saving"
+                 />
+
+      <Button x:Name="btn_save"
+              Text="Save"/>
+      <Button x:Name="btn_Discard"
+              Text="Discard"/>
+    </StackLayout>
+  </ScrollView>
+
 </ContentPage>
