added some design

--- a/Daijoubu/Daijoubu/App.xaml
+++ b/Daijoubu/Daijoubu/App.xaml
@@ -8,17 +8,35 @@
     <ResourceDictionary>
       <Style x:Key="MultipleChoiceButtonStyle" TargetType="Button">
         <Setter Property="BorderColor" Value="Blue" />
-        <Setter Property="BorderRadius" Value="15" />
-        <Setter Property="BorderWidth" Value="5" />
+        <Setter Property="BorderRadius" Value="50" />
+        <Setter Property="BorderWidth" Value="10" />
         <Setter Property="FontSize" Value="20" />
-        <Setter Property="TextColor" Value="Teal" />
+        <Setter Property="BackgroundColor" Value="#655338" />
+        <Setter Property="TextColor" Value="White" />
       </Style>
+
+      <Style x:Key="TypicalContentPage" TargetType="ContentPage">
+        <Setter Property="Padding" Value="50" />
+        <Setter Property="BackgroundColor" Value="#273442" />
+      </Style>
+
 
       <Style x:Key="SingleQuestionLabel" TargetType="Label">
         <Setter Property="HorizontalOptions" Value="Center" />
-        <Setter Property="FontSize" Value="60" />
+        <Setter Property="FontSize" Value="80" />
         <Setter Property="TextColor" Value="Teal" />
       </Style>
+
+      <Style x:Key="BigButtons" TargetType="Button">
+        <Setter Property="Margin" Value="5" />
+        <Setter Property="BorderColor" Value="Blue" />
+        <Setter Property="BorderRadius" Value="50" />
+        <Setter Property="BorderWidth" Value="10" />
+        <Setter Property="BackgroundColor" Value="#19293B" />
+        <Setter Property="TextColor" Value="Red" />
+        <Setter Property="ContentLayout" Value="Top,0" />
+      </Style>
+      
     </ResourceDictionary>
     
   </Application.Resources>
