--- a/Daijoubu/Daijoubu/AppPages/ProfilePages/AchivementPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/ProfilePages/AchivementPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Daijoubu.AppPages.ProfilePages.AchivementPage"
-             Padding="50">
+             Style="{StaticResource TypicalContentPage}">
 
 
   <StackLayout>
