--- a/Daijoubu/Daijoubu/AppPages/QuizPages/MultipleChoicePage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/QuizPages/MultipleChoicePage.xaml
@@ -5,7 +5,7 @@
              Title="Choice Module" 
              x:Name="MultipleChoicePage"
              AutomationId="auto_MultipleChoicePage"
-             Padding="50">
+             Style="{StaticResource TypicalContentPage}">
 
   <StackLayout>
 
