--- a/Daijoubu/Daijoubu/AppPages/AboutPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/AboutPage.xaml
@@ -3,8 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Daijoubu.AppPages.AboutPage"
              Title="About"
-             BackgroundColor="#DFDFDF"
-             Padding="50">
+             Style="{StaticResource TypicalContentPage}">
   <StackLayout
     Padding="10">
 
