--- a/Daijoubu/Daijoubu/AppPages/QuizPages/ListeningPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/QuizPages/ListeningPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Daijoubu.AppPages.QuizPages.ListeningPage"
              Title="Listening Module"
-             Padding="50">
+             Style="{StaticResource TypicalContentPage}">
 
   <StackLayout>
     <Label Text=" " />
