--- a/Daijoubu/Daijoubu/AppPages/QuizPages/MCCatSelectPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/QuizPages/MCCatSelectPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Daijoubu.AppPages.QuizPages.MCCatSelectPage"
-             Padding="50">
+             Style="{StaticResource TypicalContentPage}">
   
   <StackLayout>
     <Button x:Name="btn_hiragana_quiz"
