--- a/Daijoubu/Daijoubu/AppPages/SettingsPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/SettingsPage.xaml
@@ -3,9 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Daijoubu.AppPages.SettingsPage"
              Title="Settings"
-             BackgroundColor="#DFDFDF"
-             Padding="50"
-             >
+             Style="{StaticResource TypicalContentPage}">
 
   <ScrollView>
     <StackLayout>
