--- a/Daijoubu/Daijoubu/App.xaml
+++ b/Daijoubu/Daijoubu/App.xaml
@@ -6,6 +6,22 @@
 
     <!-- Application resource dictionary -->
     <ResourceDictionary>
+
+      <!-- Default Style For buttons -->
+      <Style TargetType="Button">
+        <Setter Property="BorderColor" Value="#422E0F" />
+        <Setter Property="BorderRadius" Value="50" />
+        <Setter Property="BorderWidth" Value="10" />
+        <Setter Property="BackgroundColor" Value="#655338" />
+        <Setter Property="TextColor" Value="White" />
+      </Style>
+
+      <!-- Default Style For content page to counter the margin -->
+      <Style x:Key="TypicalContentPage" TargetType="ContentPage">
+        <Setter Property="Padding" Value="50" />
+        <Setter Property="BackgroundColor" Value="#273442" />
+      </Style>
+      
       <Style x:Key="MultipleChoiceButtonStyle" TargetType="Button">
         <Setter Property="BorderColor" Value="Blue" />
         <Setter Property="BorderRadius" Value="50" />
@@ -15,10 +31,9 @@
         <Setter Property="TextColor" Value="White" />
       </Style>
 
-      <Style x:Key="TypicalContentPage" TargetType="ContentPage">
-        <Setter Property="Padding" Value="50" />
-        <Setter Property="BackgroundColor" Value="#273442" />
-      </Style>
+
+
+      
 
 
       <Style x:Key="SingleQuestionLabel" TargetType="Label">
@@ -36,8 +51,8 @@
         <Setter Property="TextColor" Value="Red" />
         <Setter Property="ContentLayout" Value="Top,0" />
       </Style>
-      
+
     </ResourceDictionary>
-    
+
   </Application.Resources>
 </Application>
