--- a/Daijoubu/Daijoubu/AppPages/SettingsPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/SettingsPage.xaml
@@ -5,38 +5,38 @@
              Title="Settings"
              Style="{StaticResource TypicalContentPage}">
 
-  <ScrollView>
-    <StackLayout>
 
-      <StackLayout Orientation="Horizontal">
-        <Label Text="Haptic Feedback" />
-        <Switch x:Name="switch_HapticFeedback"/>
-      </StackLayout>
+  <StackLayout Padding="10">
 
-      <StackLayout Orientation="Horizontal">
-        <Label Text="Voice" />
-        <Switch x:Name="switch_TTS"/>
-      </StackLayout>
-
-      <Label Text="Answer feedback delay" />
-      <StackLayout Orientation="Horizontal">
-        <Slider x:Name="slider_AnswerFeedBackDelay"
-              Maximum="5000"
-              Minimum="1000"/>
-        <Label Text="{Binding Value,StringFormat='{0:0.0}', Source={x:Reference slider_AnswerFeedBackDelay}}" />
-      </StackLayout>
-
-      <ProgressBar x:Name="progress_saving"
-                   IsVisible="False"/>
-
-      <StackLayout Orientation="Horizontal">
-        <Button x:Name="btn_save"
-              Text="Save"/>
-        <Button x:Name="btn_Discard"
-                Text="Discard"/>
-      </StackLayout>
-
+    <StackLayout Orientation="Horizontal">
+      <Switch x:Name="switch_HapticFeedback"/>
+      <Label Text="Haptic Feedback" />
     </StackLayout>
-  </ScrollView>
+
+    <StackLayout Orientation="Horizontal">
+      <Switch x:Name="switch_TTS"/>
+      <Label Text="Voice" />
+    </StackLayout>
+
+    <Label Text="Answer feedback delay" />
+    <StackLayout Orientation="Horizontal">
+      <Label Text="{Binding Value,StringFormat='{0:0.0}', Source={x:Reference slider_AnswerFeedBackDelay}}" />
+      <Slider x:Name="slider_AnswerFeedBackDelay"
+            Maximum="5000"
+            Minimum="1000"/>
+    </StackLayout>
+
+    <ProgressBar x:Name="progress_saving"
+                 IsVisible="False"/>
+
+    <StackLayout Orientation="Horizontal">
+      <Button x:Name="btn_save"
+            Text="Save"/>
+      <Button x:Name="btn_Discard"
+              Text="Discard"/>
+    </StackLayout>
+
+  </StackLayout>
+
 
 </ContentPage>
