done with assesment page

--- a/Daijoubu/Daijoubu/App.xaml
+++ b/Daijoubu/Daijoubu/App.xaml
@@ -18,6 +18,7 @@
 
       <Style TargetType="Label">
         <Setter Property="TextColor" Value="White" />
+        <Setter Property="FontSize" Value="Medium" />
       </Style>
       
       <!-- Default Style For content page to counter the margin -->
