--- a/Daijoubu/Daijoubu/AppPages/ProfilePages/AchivementPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/ProfilePages/AchivementPage.xaml
@@ -11,37 +11,54 @@
         <DataTemplate>
           <ViewCell>
             <ViewCell.View>
-                <StackLayout Orientation="Horizontal">
+                <StackLayout Orientation="Vertical" >
                   <Label Text="{Binding Item}"
-                         FontSize="50"/>
-                  <StackLayout>
-                    <StackLayout Orientation="Horizontal">
-                      <Label Text="💳 : "/>
-                      <Label Text="{Binding ItemID}"/>
-                    </StackLayout>
-                    <StackLayout Orientation="Horizontal">
-                      <Label Text="✓ : "
-                             TextColor="Green"/>
-                      <Label Text="{Binding Correct}"/>
-                    </StackLayout>
-                    <StackLayout Orientation="Horizontal">
-                      <Label Text="✘ : "
-                             TextColor="Red"/>
-                      <Label Text="{Binding Mistake}"/>
-                    </StackLayout>
-                    <StackLayout Orientation="Horizontal">
-                      <Label Text="⌚ : "/>
-                      <Label Text="{Binding LastView}"/>
-                    </StackLayout>
-                    <StackLayout Orientation="Horizontal">
-                      <Label Text="⌛ : "/>
-                      <Label Text="{Binding NextQueue}"/>
-                    </StackLayout>
-                    <StackLayout Orientation="Horizontal">
-                      <Label Text="% : "/>
-                      <Label Text="{Binding Percent, StringFormat='{0:0.00}'}"/>
-                    </StackLayout>
-                  </StackLayout>
+                         FontSize="50"
+                         HorizontalOptions="Center" 
+                         VerticalOptions="Center"/>
+                  
+                  <Grid>
+                    <Grid.ColumnDefinitions>
+                      <ColumnDefinition Width="1*"/>
+                      <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                      <RowDefinition Height="1*" />
+                      <RowDefinition Height="1*"/>
+                    </Grid.RowDefinitions>
+                    
+                    <Label Text="{Binding Correct, StringFormat='✓: {0}'}"
+                         TextColor="Green"
+                         Grid.Row="0"
+                         Grid.Column="0"
+                         HorizontalOptions="Center" 
+                         VerticalOptions="Center"
+                         
+                         />
+                    
+                    <Label Text="{Binding Mistake, StringFormat='✘: {0}'}"
+                         TextColor="Red"
+                         Grid.Row="1"
+                         Grid.Column="0"
+                         HorizontalOptions="Center" 
+                         VerticalOptions="Center"
+                         />
+                    
+                    <Label Text="{Binding LastView, StringFormat='⌚: {0}'}"
+                         Grid.Row="0"
+                         Grid.Column="1"
+                         HorizontalOptions="Center" 
+                         VerticalOptions="Center"
+                         />
+
+                    <Label Text="{Binding Percent, StringFormat='%: {0}'}"
+                         Grid.Row="1"
+                         Grid.Column="1"
+                         HorizontalOptions="Center" 
+                         VerticalOptions="Center"
+                         />
+                    
+                  </Grid>
                 </StackLayout>
             </ViewCell.View>
           </ViewCell>
