--- a/Daijoubu/Daijoubu/MainPage.xaml
+++ b/Daijoubu/Daijoubu/MainPage.xaml
@@ -56,14 +56,19 @@
                          TextColor="White"
                          Grid.Row="0"
                          />
+                  <Label Text="{Binding _lastview, StringFormat='⌚: {0}'}"
+                         Grid.Row="1"
+                         Grid.Column="0"
+                         />
+                  
                   <Label Text="{Binding Clock, StringFormat='⌛: {0}'}"
                          TextColor="{Binding ClockColor}"
-                         Grid.Row="1"
+                         Grid.Row="2"
                          Grid.Column="0"
                          />
                   <Label Text="{Binding Percent, StringFormat='% : {0:0.00}'}"
                          TextColor="White"
-                         Grid.Row="2"
+                         Grid.Row="3"
                          Grid.Column="0"
                          />
 
