--- a/Daijoubu/Daijoubu/AppPages/ProfilePages/AchivementPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/ProfilePages/AchivementPage.xaml
@@ -11,7 +11,7 @@
         <DataTemplate>
           <ViewCell>
             <ViewCell.View>
-                <StackLayout Orientation="Vertical" >
+                <StackLayout Orientation="Vertical" Padding="20">
                   <Label Text="{Binding Item}"
                          FontSize="50"
                          HorizontalOptions="Center" 
@@ -31,8 +31,8 @@
                          TextColor="Green"
                          Grid.Row="0"
                          Grid.Column="0"
-                         HorizontalOptions="Center" 
-                         VerticalOptions="Center"
+                         
+                         
                          
                          />
                     
@@ -40,22 +40,22 @@
                          TextColor="Red"
                          Grid.Row="1"
                          Grid.Column="0"
-                         HorizontalOptions="Center" 
-                         VerticalOptions="Center"
+                          
+                         
                          />
                     
                     <Label Text="{Binding LastView, StringFormat='⌚: {0}'}"
                          Grid.Row="0"
                          Grid.Column="1"
-                         HorizontalOptions="Center" 
-                         VerticalOptions="Center"
+                         
+                         
                          />
 
                     <Label Text="{Binding Percent, StringFormat='%: {0}'}"
                          Grid.Row="1"
                          Grid.Column="1"
-                         HorizontalOptions="Center" 
-                         VerticalOptions="Center"
+                         
+                         
                          />
                     
                   </Grid>
