--- a/Daijoubu/Daijoubu/AppPages/QuizPages/ListeningPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/QuizPages/ListeningPage.xaml
@@ -6,11 +6,16 @@
              Style="{StaticResource TypicalContentPage}">
 
   <StackLayout>
-    <Label Text=" " />
-    <Image x:Name="img_speaker"
+    <Frame Style="{StaticResource QuestionCardOuterFrame}">
+      <Frame Style="{StaticResource QuestionCardInnerFrame}">
+        <Image x:Name="img_speaker"
            Source="speaker"
            Aspect="AspectFit"
            Scale=".5"/>
+      </Frame>
+    </Frame>
+
+    
     <Label Text=" " />
     <Label x:Name="lbl_correct_ans"
            Text=" "
