--- a/Daijoubu/Daijoubu/AppPages/QuizPages/TypingPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/QuizPages/TypingPage.xaml
@@ -6,24 +6,17 @@
              Style="{StaticResource TypicalContentPage}">
   <StackLayout>
 
-    <Label Text=" " />
-    <Label Text=" " />
-    <Label Text=" " />
-    
-    <Label x:Name="label_question" 
-           Text="*value*" 
-           FontSize="30"
-           HorizontalOptions="Center" />
-
-    <Label Text=" " />
-    <Label Text=" " />
-    <Label Text=" " />
-    <Label Text=" " />
-    
+    <Frame Style="{StaticResource QuestionCardOuterFrame}">
+      <Frame Style="{StaticResource QuestionCardInnerFrame}">
+        <Label x:Name="label_question"
+             Text="Getting Ready ..."
+             Style="{StaticResource SingleQuestionLabel}" />
+      </Frame>
+    </Frame>
+      
     <Entry x:Name="textentry_answer"
            Placeholder="Type your answer"/>
 
-    <Label Text=" " />
     <Label Text=" " />
     
     <Button x:Name="btn_submit"
