--- a/Daijoubu/Daijoubu/MainPage.xaml
+++ b/Daijoubu/Daijoubu/MainPage.xaml
@@ -27,53 +27,55 @@
         <DataTemplate>
           <ViewCell>
             <ViewCell.View>
+              <Frame Style="{StaticResource QuestionCardOuterFrame}"
+                     Margin="15,15,15,0">
+                <Frame Style="{StaticResource QuestionCardInnerFrame}">
+                  <StackLayout>
+                    <Label Text="{Binding MainLabel}"
+                           TextColor="#FFFFFF"
+                           FontSize="{Binding MainLabelFontSize}"
+                           HorizontalOptions="Center"/>
 
-              <Grid Margin="15">
-                <Grid.ColumnDefinitions>
-                  <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
+                    <Grid Margin="0">
+                      <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                      </Grid.ColumnDefinitions>
 
-                <Grid.RowDefinitions>
-                  <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
+                      <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                      </Grid.RowDefinitions>
 
-                <Label Text="{Binding MainLabel}"
-                       TextColor="#FFFFFF"
-                       FontSize="50"
-                       Grid.Row="0"
-                       Grid.Column="0"/>
+                      <Label Text="{Binding Title}"
+                             TextColor="White"
+                             FontSize="Small"
+                             Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"/>
 
-                <Grid Grid.Column="1">
-                  
-                  <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                  </Grid.ColumnDefinitions>
-                  <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                  </Grid.RowDefinitions>
+                      <Label Text="{Binding Subtitle}"
+                             TextColor="White"
+                             FontSize="Small"
+                             Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" />
 
-                  <Label Text="{Binding Title}"
-                         TextColor="White"
-                         Grid.Row="0"
-                         />
-                  <Label Text="{Binding _lastview, StringFormat='⌚: {0}'}"
-                         Grid.Row="1"
-                         Grid.Column="0"
-                         />
-                  
-                  <Label Text="{Binding Clock, StringFormat='⌛: {0}'}"
-                         TextColor="{Binding ClockColor}"
-                         Grid.Row="2"
-                         Grid.Column="0"
-                         />
-                  <Label Text="{Binding Percent, StringFormat='% : {0:0.00}'}"
-                         TextColor="White"
-                         Grid.Row="3"
-                         Grid.Column="0"
-                         />
+                      <Label Text="{Binding _lastview, StringFormat='⌚: {0}'}"
+                             FontSize="Small"
+                             Grid.Row="2" Grid.Column="0"/>
 
-                </Grid>
-              </Grid>
+                      <Label Text="{Binding Clock, StringFormat='⌛: {0}'}"
+                             FontSize="Small"
+                             TextColor="{Binding ClockColor}"
+                             Grid.Row="2" Grid.Column="1"/>
+
+                      <Label Text="{Binding Percent, StringFormat='％ : {0:0.00}'}"
+                             FontSize="Small"
+                             TextColor="White"
+                             Grid.Row="3" Grid.Column="0"/>
+
+
+                    </Grid>
+                  </StackLayout>
+
+                </Frame>
+              </Frame>
+
             </ViewCell.View>
           </ViewCell>
         </DataTemplate>
