--- a/Daijoubu/Daijoubu/AppPages/QuizPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/QuizPage.xaml
@@ -17,27 +17,26 @@
       <RowDefinition Height="1*" />
     </Grid.RowDefinitions>
 
-    <Button
+    <Button Grid.Row="0" Grid.Column="0"
             x:Name="btn_multiple"
             AutomationId="auto_btn_multiple"
             Text="Multiple Choice"
             Image="@drawable/multiple_choice"
             Style="{StaticResource BigButtons}" />
           
-    <Button Grid.Column="1"
+    <Button Grid.Row="0" Grid.Column="1"
             x:Name="btn_listen"
             Text="Listening"
             Image="@drawable/Listening_logo"
             Style="{StaticResource BigButtons}" />
 
-    <Button Grid.Row="1"
+    <Button Grid.Row="1" Grid.Column="0"
             x:Name="btn_typing"
             Text="Typing"
             Image="@drawable/FillBlank_logo"
             Style="{StaticResource BigButtons}" />
 
-    <Button Grid.Column="1"
-            Grid.Row="1"
+    <Button Grid.Row="1" Grid.Column="1"
             x:Name="btn_reading"
             Text="Reading"
             Image="@drawable/Reading_logo"
