--- a/Daijoubu/Daijoubu/SideMenuItems.xaml
+++ b/Daijoubu/Daijoubu/SideMenuItems.xaml
@@ -18,37 +18,32 @@
                  x:Name="SideMenuButton_Home"/>-->
     <Button Text="Profile"
             x:Name="SideMenuButton_Profile"
-            TextColor="White"
-            BackgroundColor="#273442"
+            Style="{StaticResource SideMenuButtons}"
             Grid.Row="0"
             Grid.Column="0"
             Image="@drawable/profile_logo"/>
     <Button Text="Quiz N5"
             x:Name="SideMenuButton_Quiz"
-            TextColor="White"
             AutomationId="auto_SideMenuButton_Quiz"
-            BackgroundColor="#273442"
+            Style="{StaticResource SideMenuButtons}"
             Grid.Row="1"
             Grid.Column="0"
             Image="@drawable/n5_logo"/>
     <Button Text="Quiz N4"
             x:Name="SideMenuButton_QuizN4"
-            TextColor="White"
             AutomationId="auto_SideMenuButton_Quiz"
-            BackgroundColor="#273442"
+            Style="{StaticResource SideMenuButtons}"
             Grid.Row="2"
             Grid.Column="0"
             Image="@drawable/n4_logo"/>
     <Button Text="Settings"
-            TextColor="White"
             x:Name="SideMenuButton_Settings"
-            BackgroundColor="#273442"
+            Style="{StaticResource SideMenuButtons}"
             Grid.Row="3"
             Image="@drawable/settings_logo"/>
     <Button Text="About"
-            TextColor="White"
             x:Name="SideMenuButton_About"
-            BackgroundColor="#273442"
+            Style="{StaticResource SideMenuButtons}"
             Grid.Row="4"
             Grid.Column="0"
             Image="@drawable/about_logo"/>
