--- a/Daijoubu/Daijoubu/SideMenuPage.xaml
+++ b/Daijoubu/Daijoubu/SideMenuPage.xaml
@@ -4,7 +4,7 @@
              x:Class="Daijoubu.SideMenuPage"
              xmlns:local="clr-namespace:Daijoubu;assembly=Daijoubu"
              Title="Daijoubu"
-             BackgroundColor="#273442"
+             BackgroundColor="#38B4AB"
              >
 
   <MasterDetailPage.Master>
