--- a/Daijoubu/Daijoubu/AppPages/ProfilePages/AchivementPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/ProfilePages/AchivementPage.xaml
@@ -11,55 +11,50 @@
         <DataTemplate>
           <ViewCell>
             <ViewCell.View>
-                <StackLayout Orientation="Vertical" Padding="20">
-                  <Label Text="{Binding Item}"
-                         FontSize="50"
-                         HorizontalOptions="Center" 
-                         VerticalOptions="Center"/>
-                  
-                  <Grid>
-                    <Grid.ColumnDefinitions>
-                      <ColumnDefinition Width="1*"/>
-                      <ColumnDefinition Width="1*"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                      <RowDefinition Height="1*" />
-                      <RowDefinition Height="1*"/>
-                    </Grid.RowDefinitions>
-                    
-                    <Label Text="{Binding Correct, StringFormat='✓: {0}'}"
-                         TextColor="Green"
-                         Grid.Row="0"
-                         Grid.Column="0"
-                         
-                         
-                         
-                         />
-                    
-                    <Label Text="{Binding Mistake, StringFormat='✘: {0}'}"
-                         TextColor="Red"
-                         Grid.Row="1"
-                         Grid.Column="0"
-                          
-                         
-                         />
-                    
-                    <Label Text="{Binding LastView, StringFormat='⌚: {0}'}"
-                         Grid.Row="0"
-                         Grid.Column="1"
-                         
-                         
-                         />
+              <Frame Style="{StaticResource QuestionCardOuterFrame}"
+                     Margin="15,6,15,6">
+                <Frame Style="{StaticResource QuestionCardInnerFrame}"
+                       Padding="5,0,5,5">
+                  <StackLayout Orientation="Vertical" Padding="0">
+                    <Label Text="{Binding Item}"
+                           FontSize="50"
+                           HorizontalOptions="Center"
+                           VerticalOptions="Center"/>
 
-                    <Label Text="{Binding Percent, StringFormat='%: {0}'}"
-                         Grid.Row="1"
-                         Grid.Column="1"
-                         
-                         
-                         />
-                    
-                  </Grid>
-                </StackLayout>
+                    <Grid>
+                      <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="1*"/>
+                      </Grid.ColumnDefinitions>
+                      <Grid.RowDefinitions>
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*"/>
+                      </Grid.RowDefinitions>
+
+                      <Label Text="{Binding Reading, StringFormat='💬: {0}'}"
+                             Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"/>
+                      
+                      <Label Text="{Binding SubTitle, StringFormat='📖: {0}'}"
+                             Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3"/>
+                                       
+                      <Label Text="{Binding Correct, StringFormat='⚪: {0}'}"
+                             TextColor="Green"
+                             Grid.Row="2" Grid.Column="0" />
+
+                      <Label Text="{Binding Mistake, StringFormat='✖️: {0}'}"
+                             TextColor="Red"
+                             Grid.Row="3" Grid.Column="0" />
+
+                      <Label Text="{Binding LastView, StringFormat='⌚: {0}'}"
+                             Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2"/>
+
+                      <Label Text="{Binding Percent, StringFormat='％: {0:0.00}'}"
+                             Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" />
+
+                    </Grid>
+                  </StackLayout>
+                </Frame>
+              </Frame>
             </ViewCell.View>
           </ViewCell>
         </DataTemplate>
